--- a/css/_site.scss
+++ b/css/_site.scss
@@ -1,8 +1,13 @@
-.wrap {
+%wrap {
   margin: 0 auto;
   max-width: 50rem;
-  padding: 0 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   position: relative;
+}
+
+.site {
+  @extend %wrap;
 }
 
 .section {
